package org.example.e_builder.improve;

public abstract class HouseBuilder {
    abstract void buildBasic();

    abstract void buildWalls();

    abstract void roofed();

    abstract House buildHouse();
}
