@startuml
'https://plantuml.com/class-diagram

abstract class HouseBuilder{
    abstract void buildBasic()
    abstract void buildWalls()
    abstract void roofed()
    abstract House buildHouse()
}
class CommonHouse
class HighBuildingHouse
class House
class HouseDirector{
    private HouseBuilder houseBuilder
}
HouseBuilder<|--CommonHouse
HouseBuilder<|--HighBuildingHouse
CommonHouse*--House
HighBuildingHouse*--House
HouseDirector o-- HouseBuilder
@enduml